[package]
name = "uefi-backdoor"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.cargo-xbuild]
panic_immediate_abort = true

[dependencies]
ezhook = "0.1.0"
panic-abort = "0.3.2"
r-efi = "3.0.0"
uefi = "0.4.6"
